seperate axios instance added for base url and token authorization

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
+#nprogress .bar {
+  background: #e91e63 !important;
+}
+
+#nprogress .peg {
+  box-shadow: 0 0 10px #e91e63, 0 0 5px #e91e63 !important;
+}
+
+#nprogress .spinner-icon {
+  border-top-color: #e91e63 !important;
+  border-left-color: #e91e63 !important;
+}
+
 .app-header {
   position: fixed;
-
   top: 0;
   left: 0;
   height: 70px;
@@ -77,4 +89,18 @@
 
 .btn-full {
   width: 100%;
+}
+
+.main-container {
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-title {
+  margin: 10px 0px;
+  padding: 5px;
+  font-weight: bold;
 }
