--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,12 @@
   top: 0;
   left: 0;
   height: 70px;
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .full-width {
@@ -112,7 +113,15 @@
 
 .device-item {
   width: 30%;
-  border: 1px solid red;
-  padding: 10px;
-  margin: 10px;
+  border: 1px solid #e91e63;
+  padding: 12px;
+  margin: 20px;
+  cursor: pointer;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  box-shadow: 1px 1px 1px rgba(243, 60, 132, 0.6);
+}
+
+.device-item p {
+  margin: 5px 0px;
 }
