--- a/src/App.css
+++ b/src/App.css
@@ -125,3 +125,24 @@
 .device-item p {
   margin: 5px 0px;
 }
+
+.overview-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.overview-item {
+  width: 44%;
+  border: 1px solid #e91e63;
+  padding: 12px;
+  margin: 20px;
+  cursor: pointer;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  box-shadow: 1px 1px 1px rgba(243, 60, 132, 0.6);
+}
+
+.overview-item p {
+  margin: 5px 0px;
+}
