--- a/src/components/Utility/Modal.css
+++ b/src/components/Utility/Modal.css
@@ -13,7 +13,7 @@
   position: fixed;
   /* display: none; */
   z-index: 200;
-  top: 20%;
+  top: 5%;
   left: 30%;
   width: 40%;
   background: #fff;
@@ -35,6 +35,8 @@
 .modal__content {
   margin: 0 0 1rem 0;
   padding: 4px;
+  overflow: auto;
+  max-height: 650px;
 }
 
 .modal__actions {
