--- a/src/components/Utility/Modal.css
+++ b/src/components/Utility/Modal.css
@@ -11,7 +11,9 @@
 
 .modal {
   position: fixed;
-  /* display: none; */
+  opacity: 0;
+  transform: translateY(-3rem);
+  transition: opacity 100ms, transform 100ms;
   z-index: 200;
   top: 5%;
   left: 30%;
@@ -20,6 +22,12 @@
   padding: 1rem;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.modal-open {
+  display: block !important;
+  opacity: 1 !important;
+  transform: translateY(0) !important;
 }
 
 .modal__title {
