--- a/src/App.css
+++ b/src/App.css
@@ -208,10 +208,11 @@
 }
 
 .app-menu {
+  display: none;
   opacity: 0;
   transform: translateY(-3rem);
   transition: opacity 100ms, transform 100ms;
-  right: 20px;
+  right: 10px;
 }
 .menu-list {
   list-style-type: none;
